crates/cox-app/tests/snapshots/scenarios__allow_for_session.snap
---
source: crates/cox-app/tests/scenarios.rs
expression: "lines.join(\"\\n\")"
---
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#2","turn":1,"kind":{"type":"user","text":"allow_for_session","attachments":[]}},"after":"turn:#1"}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"doc_tail","id":"item:#3","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"first write"}]}]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"first write","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"first write"}]}]}]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"touch","summary":"touch `a`","icon":"tool","risk":"write","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"approval:#4","turn":1,"kind":{"type":"approval","call":"#4","tool":"touch","summary":"a","input":{"path":"a"},"grants":["a"],"why":{"type":"risk","risk":"write"},"source":{"session":"#5"},"decision":null,"by":null}},"after":"call:#4"}
{"op":"upsert","block":{"id":"approval:#4","turn":1,"kind":{"type":"approval","call":"#4","tool":"touch","summary":"a","input":{"path":"a"},"grants":["a"],"why":{"type":"risk","risk":"write"},"source":{"session":"#5"},"decision":{"type":"allow_for_session"},"by":"user"}},"after":"call:#4"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"touch","summary":"touch `a`","icon":"tool","risk":"write","state":"done","tail":"touched","archive":{"id":"#6","bytes":7},"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#7","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"approval:#4"}
{"op":"doc_tail","id":"item:#7","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"second write to the same subject"}]}]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#7","turn":1,"kind":{"type":"assistant","text":"second write to the same subject","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"second write to the same subject"}]}]}]}}},"after":"approval:#4"}
{"op":"upsert","block":{"id":"call:#8","turn":1,"kind":{"type":"tool","tool":"touch","summary":"touch `a`","icon":"tool","risk":"write","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#7"}
{"op":"upsert","block":{"id":"call:#8","turn":1,"kind":{"type":"tool","tool":"touch","summary":"touch `a`","icon":"tool","risk":"write","state":"done","tail":"touched","archive":{"id":"#9","bytes":7},"diff":null,"duration_ms":0}},"after":"item:#7"}
{"op":"upsert","block":{"id":"item:#10","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"call:#8"}
{"op":"doc_tail","id":"item:#10","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"done"}]}]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#10","turn":1,"kind":{"type":"assistant","text":"done","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"done"}]}]}]}}},"after":"call:#8"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"end_turn"}}},"after":null}
