crates/cox-app/tests/snapshots/scenarios__ask_then_deny.snap
---
source: crates/cox-app/tests/scenarios.rs
expression: "lines.join(\"\\n\")"
---
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#2","turn":1,"kind":{"type":"user","text":"ask_then_deny","attachments":[]}},"after":"turn:#1"}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"doc_tail","id":"item:#3","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"writing"}]]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"writing","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"writing"}]]}]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"touch","summary":"a","risk":"write","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"approval:#4","turn":1,"kind":{"type":"approval","call":"#4","tool":"touch","summary":"a","why":{"type":"risk","risk":"write"},"source":{"session":"#5"},"decision":null,"by":null}},"after":"call:#4"}
{"op":"upsert","block":{"id":"approval:#4","turn":1,"kind":{"type":"approval","call":"#4","tool":"touch","summary":"a","why":{"type":"risk","risk":"write"},"source":{"session":"#5"},"decision":{"type":"deny","reason":"no"},"by":"user"}},"after":"call:#4"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"touch","summary":"a","risk":"write","state":"failed","tail":"permission denied: no","archive":null,"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#6","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"approval:#4"}
{"op":"doc_tail","id":"item:#6","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"gave up"}]]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#6","turn":1,"kind":{"type":"assistant","text":"gave up","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"gave up"}]]}]}}},"after":"approval:#4"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"end_turn"}}},"after":null}
