crates/cox-app/tests/snapshots/scenarios__checkpoint_rewind.snap
---
source: crates/cox-app/tests/scenarios.rs
expression: "lines.join(\"\\n\")"
---
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#2","turn":1,"kind":{"type":"user","text":"checkpoint_rewind","attachments":[]}},"after":"turn:#1"}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"doc_tail","id":"item:#3","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"first reply"}]]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"first reply","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"first reply"}]]}]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"end_turn"}}},"after":null}
{"op":"upsert","block":{"id":"turn:#4","turn":2,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#5","turn":2,"kind":{"type":"user","text":"second turn","attachments":[]}},"after":"turn:#4"}
{"op":"upsert","block":{"id":"item:#6","turn":2,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#5"}
{"op":"doc_tail","id":"item:#6","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"editing"}]]}]}
{"op":"upsert","block":{"id":"turn:#4","turn":2,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#6","turn":2,"kind":{"type":"assistant","text":"editing","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"editing"}]]}]}}},"after":"item:#5"}
{"op":"upsert","block":{"id":"call:#7","turn":2,"kind":{"type":"tool","tool":"touch","summary":"touch `a.rs`","icon":"tool","risk":"write","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#6"}
{"op":"upsert","block":{"id":"checkpoint:18","turn":2,"kind":{"type":"checkpoint","files":["/tmp/cox-turn/a.rs"]}},"after":"call:#7"}
{"op":"upsert","block":{"id":"call:#7","turn":2,"kind":{"type":"tool","tool":"touch","summary":"touch `a.rs`","icon":"tool","risk":"write","state":"done","tail":"touched","archive":{"id":"#8","bytes":7},"diff":null,"duration_ms":0}},"after":"item:#6"}
{"op":"upsert","block":{"id":"item:#9","turn":2,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"checkpoint:18"}
{"op":"doc_tail","id":"item:#9","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"edited"}]]}]}
{"op":"upsert","block":{"id":"turn:#4","turn":2,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#9","turn":2,"kind":{"type":"assistant","text":"edited","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"edited"}]]}]}}},"after":"checkpoint:18"}
{"op":"upsert","block":{"id":"turn:#4","turn":2,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"end_turn"}}},"after":"item:#3"}
{"op":"remove","id":"turn:#4"}
{"op":"remove","id":"item:#5"}
{"op":"remove","id":"item:#6"}
{"op":"remove","id":"call:#7"}
{"op":"remove","id":"checkpoint:18"}
{"op":"remove","id":"item:#9"}
{"op":"upsert","block":{"id":"notice:26","turn":1,"kind":{"type":"notice","level":"info","text":"rewound to T2: 1 files restored, conversation cut"}},"after":"item:#3"}
