crates/cox-app/tests/snapshots/scenarios__edit.snap
---
source: crates/cox-app/tests/scenarios.rs
expression: "lines.join(\"\\n\")"
---
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#2","turn":1,"kind":{"type":"user","text":"edit","attachments":[]}},"after":"turn:#1"}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"doc_tail","id":"item:#3","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"Editing."}]]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"Editing.","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"Editing."}]]}]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"edit","summary":"Editing `src/lib.rs`","icon":"edit","risk":"read_only","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"edit","summary":"Edited `src/lib.rs` +2 −1","icon":"edit","risk":"read_only","state":"done","tail":"1\tfn main() {}","archive":{"id":"#5","bytes":14},"diff":{"path":"src/lib.rs","hunks":[{"header":"@@ -1,2 +1,2 @@","lines":[{"kind":"context","old":1,"new":1,"spans":[{"text":"use","rgb":[180,142,173]},{"text":" ","rgb":[192,197,206]},{"text":"std","rgb":[192,197,206]},{"text":"::","rgb":[192,197,206]},{"text":"io","rgb":[192,197,206]},{"text":";","rgb":[192,197,206]},{"text":"","rgb":[192,197,206]}]},{"kind":"del","old":2,"new":null,"spans":[{"text":"fn","rgb":[180,142,173]},{"text":" ","rgb":[192,197,206]},{"text":"old","rgb":[143,161,179]},{"text":"(","rgb":[192,197,206]},{"text":")","rgb":[192,197,206]},{"text":" ","rgb":[192,197,206]},{"text":"{","rgb":[192,197,206]},{"text":"}","rgb":[192,197,206]},{"text":"","rgb":[192,197,206]}]},{"kind":"add","old":null,"new":2,"spans":[{"text":"fn","rgb":[180,142,173]},{"text":" ","rgb":[192,197,206]},{"text":"new","rgb":[143,161,179]},{"text":"(","rgb":[192,197,206]},{"text":")","rgb":[192,197,206]},{"text":" ","rgb":[192,197,206]},{"text":"->","rgb":[192,197,206]},{"text":" ","rgb":[192,197,206]},{"text":"u8","rgb":[180,142,173]},{"text":" ","rgb":[192,197,206]},{"text":"{","rgb":[192,197,206]},{"text":" ","rgb":[192,197,206]},{"text":"1","rgb":[208,135,112]},{"text":" ","rgb":[192,197,206]},{"text":"}","rgb":[192,197,206]},{"text":"","rgb":[192,197,206]}]}]},{"header":"@@ -40,2 +40,3 @@ impl Backoff","lines":[{"kind":"context","old":40,"new":40,"spans":[{"text":"    ","rgb":[192,197,206]},{"text":"let","rgb":[180,142,173]},{"text":" x ","rgb":[192,197,206]},{"text":"=","rgb":[192,197,206]},{"text":" ","rgb":[192,197,206]},{"text":"2","rgb":[208,135,112]},{"text":";","rgb":[192,197,206]},{"text":"","rgb":[192,197,206]}]},{"kind":"add","old":null,"new":41,"spans":[{"text":"    ","rgb":[192,197,206]},{"text":"//","rgb":[101,115,126]},{"text":" more","rgb":[101,115,126]}]},{"kind":"context","old":41,"new":42,"spans":[{"text":"}","rgb":[192,197,206]}]}]}]},"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#6","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"call:#4"}
{"op":"doc_tail","id":"item:#6","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"Done."}]]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#6","turn":1,"kind":{"type":"assistant","text":"Done.","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[[{"text":"Done."}]]}]}}},"after":"call:#4"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"end_turn"}}},"after":null}
