crates/cox-app/tests/snapshots/scenarios__explore.snap
---
source: crates/cox-app/tests/scenarios.rs
expression: "lines.join(\"\\n\")"
---
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#2","turn":1,"kind":{"type":"user","text":"explore","attachments":[]}},"after":"turn:#1"}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"doc_tail","id":"item:#3","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"looking around"}]}]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"looking around","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"looking around"}]}]}]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"read","summary":"Reading `a.rs`","icon":"read","risk":"read_only","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"call:#5","turn":1,"kind":{"type":"tool","tool":"grep","summary":"Searching `fn main`","icon":"search","risk":"read_only","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"call:#4"}
{"op":"upsert","block":{"id":"group:#4","turn":1,"kind":{"type":"tool_group","summary":"Explored 1 file, 1 search","children":["call:#4","call:#5"],"state":"running"}},"after":"item:#3"}
{"op":"upsert","block":{"id":"call:#6","turn":1,"kind":{"type":"tool","tool":"read","summary":"Reading `b.rs`","icon":"read","risk":"read_only","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"call:#5"}
{"op":"upsert","block":{"id":"group:#4","turn":1,"kind":{"type":"tool_group","summary":"Explored 2 files, 1 search","children":["call:#4","call:#5","call:#6"],"state":"running"}},"after":"item:#3"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"read","summary":"Read `a.rs` · 1 line","icon":"read","risk":"read_only","state":"done","tail":"1\tfn main() {}","archive":{"id":"#7","bytes":14},"diff":null,"duration_ms":0}},"after":"group:#4"}
{"op":"upsert","block":{"id":"call:#5","turn":1,"kind":{"type":"tool","tool":"grep","summary":"Searched `fn main` · 1 match","icon":"search","risk":"read_only","state":"done","tail":"1\tfn main() {}","archive":{"id":"#8","bytes":14},"diff":null,"duration_ms":0}},"after":"call:#4"}
{"op":"upsert","block":{"id":"call:#6","turn":1,"kind":{"type":"tool","tool":"read","summary":"Read `b.rs` · 1 line","icon":"read","risk":"read_only","state":"done","tail":"1\tfn main() {}","archive":{"id":"#9","bytes":14},"diff":null,"duration_ms":0}},"after":"call:#5"}
{"op":"upsert","block":{"id":"group:#4","turn":1,"kind":{"type":"tool_group","summary":"Explored 2 files, 1 search","children":["call:#4","call:#5","call:#6"],"state":"done"}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#10","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"call:#6"}
{"op":"doc_tail","id":"item:#10","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"found it"}]}]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#10","turn":1,"kind":{"type":"assistant","text":"found it","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"found it"}]}]}]}}},"after":"call:#6"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"end_turn"}}},"after":null}
