crates/cox-app/tests/snapshots/scenarios__max_turns.snap
---
source: crates/cox-app/tests/scenarios.rs
expression: "lines.join(\"\\n\")"
---
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#2","turn":1,"kind":{"type":"user","text":"max_turns","attachments":[]}},"after":"turn:#1"}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"echo","summary":"echo `1`","icon":"tool","risk":"read_only","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"echo","summary":"echo `1`","icon":"tool","risk":"read_only","state":"done","tail":"1","archive":{"id":"#5","bytes":1},"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"max_turns"}}},"after":null}
