crates/cox-app/tests/snapshots/scenarios__subagent_explore.snap
---
source: crates/cox-app/tests/scenarios.rs
expression: "lines.join(\"\\n\")"
---
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":null,"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#2","turn":1,"kind":{"type":"user","text":"subagent_explore","attachments":[]}},"after":"turn:#1"}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"item:#2"}
{"op":"doc_tail","id":"item:#3","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"delegating"}]}]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#3","turn":1,"kind":{"type":"assistant","text":"delegating","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"delegating"}]}]}]}}},"after":"item:#2"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"agent","summary":"Delegating to `explore`: find x","icon":"agent","risk":"read_only","state":"running","tail":"","archive":null,"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"task:#5","turn":1,"kind":{"type":"task","task":"#5","label":"explore: find x","tier":"cheap","done":false,"cost_usd":0.0,"exit_code":null}},"after":"call:#4"}
{"op":"append_text","id":"call:#4","text":"[explore] touch\n"}
{"op":"append_text","id":"call:#4","text":"[explore] echo\n"}
{"op":"upsert","block":{"id":"task:#5","turn":1,"kind":{"type":"task","task":"#5","label":"explore: find x","tier":"cheap","done":true,"cost_usd":0.0,"exit_code":null}},"after":"call:#4"}
{"op":"upsert","block":{"id":"call:#4","turn":1,"kind":{"type":"tool","tool":"agent","summary":"Delegated to `explore`: find x","icon":"agent","risk":"read_only","state":"done","tail":"result: x","archive":{"id":"#6","bytes":9},"diff":null,"duration_ms":0}},"after":"item:#3"}
{"op":"upsert","block":{"id":"item:#7","turn":1,"kind":{"type":"assistant","text":"","doc":{"blocks":[]}}},"after":"task:#5"}
{"op":"doc_tail","id":"item:#7","from":0,"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"done"}]}]}]}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":null}},"after":null}
{"op":"upsert","block":{"id":"item:#7","turn":1,"kind":{"type":"assistant","text":"done","doc":{"blocks":[{"type":"text","kind":"paragraph","lines":[{"spans":[{"text":"done"}]}]}]}}},"after":"task:#5"}
{"op":"upsert","block":{"id":"turn:#1","turn":1,"kind":{"type":"turn_meta","model":"claude-sonnet-5","tier":"code","usage":{"input_tokens":0,"output_tokens":0,"cache_read_tokens":0,"cache_write_tokens":0,"estimated":true,"cost_usd":0.0,"latency_ms":0},"stop":{"type":"end_turn"}}},"after":null}
